dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__send_socket_assembler__cancelled_frame_emitted_when_completion_is_cancelled.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE c#test.pending.enq=1
0:00:00.000000000 [main] TRACE g#test.pending.depth=1
0:00:00.000000000 [main] TRACE m#test.pending.depth_dist=1
0:00:00.000000000 [main] TRACE m#asm.max_datagram_size=1472
0:00:00.000000000 [main] TRACE c#test.pending.drain=1
0:00:00.000000000 [main] TRACE g#test.pending.depth=0
0:00:00.000000000 [main] TRACE m#asm.segments=0
0:00:00.000000000 [main] DEBUG all output assertions passed
0:00:00.001000000 [server] DEBUG server confirmed no packet arrived (timeout as expected)
