dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__send_socket_assembler__sends_encrypted_packet_to_peer.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=10.0.0.1:4433 addrs=[SocketAddressV6([::ffff:10.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xf0fd2a0a4d67aaf871aba8165276bbd1:0 peer_addr=10.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] TRACE c#test.pending.enq=1
0:00:00.000000000 [main] TRACE g#test.pending.depth=1
0:00:00.000000000 [main] TRACE m#test.pending.depth_dist=1
0:00:00.000000000 [main] TRACE m#asm.max_datagram_size=1472
0:00:00.000000000 [main] TRACE c#test.pending.drain=1
0:00:00.000000000 [main] TRACE g#test.pending.depth=0
0:00:00.000000000 [main] TRACE c#tx.frame[flow_data]=1
0:00:00.000000000 [main] TRACE m#tx.packet_size=48
0:00:00.000000000 [main] TRACE m#tx.frames_per_packet=1
0:00:00.000000000 [main] TRACE m#tx.payload_size=0
0:00:00.000000000 [main] TRACE c#tx.data=1
0:00:00.000000000 [main] TRACE c#tx.data[send.0]=1
0:00:00.000000000 [main] TRACE c#test.inflight.enq=1
0:00:00.000000000 [main] TRACE g#test.inflight.depth=1
0:00:00.000000000 [main] TRACE m#test.inflight.depth_dist=1
0:00:00.000000000 [main] TRACE m#asm.segments=1
0:00:00.000000000 [main] DEBUG asserting wheel routing after assembly
0:00:00.000000000 [main] DEBUG all output assertions passed
0:00:00.000500000 [server] DEBUG received encrypted datagram at server n=48
